# monetra-server

./: .env.example  .gitignore  Dockerfile  README.md  config.json  currencies.json  docker-compose.yml  entrypoint.sh  firebase_service.json  main.py  makefile  monetra-server-firebase.json  mypy.ini  pyproject.toml  test.py
api/: __init__.py  account.py  ai_insight.py  auth.py  budget.py  category.py  config.py  currency.py  external.py  llm_agent.py  planner.py  rules.py  subscription.py  summary.py  transaction.py
api/dependencies/: authorization.py  service.py
core/: config.py  db.py  exceptions.py
core/llm/: __init__.py  agent.py  conversation.py  tools.py
core/topics/: transactions.py
crud/: account.py  base.py  budget.py  category.py  chat.py  currency.py  planner.py  rules.py  subscription.py  summary.py  transaction.py  user.py
migrations/: env.py
models/: __init__.py  account.py  budget.py  category.py  chat.py  conversation.py  currency.py  kafka_models.py  planner.py  rules.py  transaction.py  user.py  views.py
schemas/: account.py  ai_schemas.py  base.py  budget.py  category.py  chat.py  currency.py  enums.py  llm_agent.py  planner.py  rules.py  subscription.py  summary.py  transaction.py  user.py
scripts/: currencies.py  seed_subscriptions.py
services/: __init__.py  account.py  ai_insight.py  auth.py  budget.py  category.py  currency.py  external.py  kafka_producer.py  llm_agent.py  planner.py  rules.py  subscription.py  summary.py  transaction.py
task_queue/: main.py
utils/: currency_conversion.py  helper.py
(+14 files in other folders)
